--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		]
 	},
 	"dependencies": {
+		"@sendgrid/mail": "^7.2.2",
 		"bootstrap": "^4.3.1",
 		"crypto-js": "^4.0.0",
 		"prop-types": "^15.6.1",
