--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@babel/plugin-proposal-class-properties": "^7.4.0",
 		"@babel/preset-env": "^7.4.3",
 		"@babel/preset-react": "^7.0.0",
+		"@vercel/node": "^1.7.4",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.5",
 		"babel-plugin-transform-class-properties": "^6.24.1",
